# Lukhas

./: .ai-tools.yaml  .baseline_smoke.txt  .codecov.yml  .codex_trace.json  .copilot-dev-freeze.txt  .copilot_tasks.md  .coverage  .coverage.g.local.6275.XmjHSABx  .coverage.g.local.91334.XLKVQAhx.wgw5  .coverage.g.local.99968.Xsiojfqx  .coveragerc  .dockerignore  .env.azure  .env.example  .env.integration.example  .env.production  .envrc  .file-organization.yaml  .file_organization_log.json  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .gpt5_package_exclude  .gpt5_package_script.sh  .import-linter-contracts.toml  .importlinter  .importlinter.ini  .last_restore_dir  .mcp-state.db-shm  .mcp-state.db-wal  .mcp.json  .pre-commit-config.yaml  .pydocstyle  .rgignore  .root-allowlist  .secrets.baseline  .semgrep.yml  .t4autofix.toml  .yamllint  (+872 more)
.benchmarks/: README.md
.claude/: AGENTS_README.md  AGENTS_README.md.bak  COMMANDS_INDEX.md  LOCAL_LLM_SETUP.md  LOCAL_LLM_SETUP.md.bak  config.yaml  promote-batch.md  settings.local.json
.codex/: config.toml
.continue/: config.json
.copilot_notes/: copilot_prompt.md  mcp_deployment_issues.md
.githooks/: post-commit-organize  pre-commit  pre-commit-security
.github/: BRANCH_PROTECTION.md  CODEOWNERS  LUKHAS_POLICIES.md  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE_MANIFEST.md  branch-protection.json  branch_protection.yml  copilot-instructions-old.md  copilot-instructions.md  dependabot.yml  github-workflows-tree.txt  labeler.yml  labels.json  pull_request_template.md
.husky/: post-commit  pre-commit
.issue_bodies/: epic.md  metrics.md  phase1.md  phase1_high_impact_bridges.md  phase2.md  phase3.md  test_phase1.md
.labot/: config.yml
.lukhas/: README.md  large-import-whitelist.yml  protected-files.yml
.lukhas_audit/: audit.jsonl  commit_security_log.jsonl  tool_incidents.jsonl
.lukhas_feedback/: feedback.jsonl  lut.json
.mcp-backups/: 2025-09-08T02-03-56-202Z-test-mcp-ultimate.md  2025-09-08T02-04-57-386Z-test-mcp-ultimate.md  2025-09-08T02-04-57-636Z-test-mcp-ultimate.md
.namespace_migration_backup_20250813_102417/: .env.example.backup  CLAUDE.md.backup  COMPREHENSIVE_CODEBASE_ASSESSMENT.md.backup  Dockerfile.mcp.light.backup  MODULE_INDEX.md.backup  TEMPORARY_STUBS_AUDIT.md.backup  azure_openai_wrapper.py.backup  ci-pr2.yml.backup  colony_dna_smoke.py.backup  gemini_wrapper.py.backup  live_integration_test.py.backup  lukhas_pwm_config.yaml.backup  lut_adapter.py.backup  production_test_suite.py.backup  pyproject.toml.backup  test_admin_dashboard.py.backup  test_client.py.backup  test_flags_integration.py.backup  test_integration_fixes.py.backup  test_ops_backup_health.py.backup  test_run_modulated_completion.py.backup  test_terminology.py.backup  test_tool_analytics.py.backup  test_tool_executor.py.backup  tool_analytics.py.backup  tool_executor.py.backup  unified_dashboard.py.backup
.policy/: diff_to_json.py  rules.rego
.pwm_cleanup_archive/: consolidate_properly.py  deploy_commercial_apis.py  fix_imports_tool.py  professional_audit_tool.py  settings.json
.reports/: ruff_autofix_after.txt  ruff_autofix_baseline.txt  ruff_quality_after.txt  ruff_quality_baseline.txt  ruff_style_after.txt  ruff_style_baseline.txt  ruff_syntax_after.txt  ruff_syntax_baseline.txt
.ruf102_damaged_files/: test_core_components_comprehensive.py.damaged  test_dream_feedback_controller.py.damaged  test_integrity_microcheck.py.damaged  test_lambda_governor_quantum.py.damaged  test_metrics.py.damaged  test_privacy_statement.py.damaged  test_registry_activation_order.py.damaged
.security_backup_20250822_025007/: dashboard_backend_requirements.txt  tools_scripts_docker_requirements.txt
.security_backup_20250822_042043/: __init__.py
.security_backup_20250822_042947/: tier_system.py
.security_backup_20250822_043147/: voice_adapter.py
.security_backup_20250822_043329/: circuit_breaker.py
.security_backup_20250822_043414/: distributed_state_manager.py
.security_backup_20250822_043559/: dreamseed_unified.py
.security_backup_20250822_043801/: openai_core_service.py
.security_backup_20250822_044003/: symbolic_weaver.py
.security_backup_20250822_044205/: ethics_swarm_colony.py
.security_backup_20250822_044407/: awareness_protocol.py
.security_backup_20250822_044508/: tagging_system.py
.security_backup_20250822_044710/: dreamseed_upgrade.py
.security_backup_20250822_045013/: oauth2_oidc_provider.py
.security_backup_20250822_045114/: dream_verification_colony.py
.security_backup_20250822_045215/: orb.py
.semgrep/: lukhas-security.yaml
.slsa/: README.md
CLAUDE_ARMY.backup_20250814_063308/: CHATGPT_CODEX_INTEGRATION_HANDOFF.md  __init__.py  mvp_demo.py  (+2 more)
mcp-lukhas-sse/: .env.sample  AUTH0_SETUP_GUIDE.md  AUTH0_VALUES_CHECKLIST.md  CHATGPT_ACTIONS_SETUP_GUIDE.md  CHATGPT_CONNECTOR_READY.md  CHATGPT_CONNECTOR_SETUP.md  CHATGPT_FIXED.md  CHATGPT_READY.md  CHATGPT_SETUP.md  COMPLETION_SUMMARY.md  FINAL_STATUS_REPORT.md  OAUTH_DIAGNOSIS.md  OAUTH_FIXED_STATUS.md  Procfile  RAILWAY_DEPLOY_GUIDE.md  RAILWAY_SUCCESS.md  README.md  README_OFFICIAL.md  README_STDIO.md  SUCCESS_CONNECTOR_READY.md  SUCCESS_REPORT.md  YOUR_MCP_SERVER.md  basic_oauth_server.py  basic_test.sh  chatgpt_openapi_schema.yaml  chatgpt_rest_openapi.yaml  chatgpt_rest_wrapper.py  chatgpt_server.py  claude.me  directory_index.json  directory_index.json.backup.1759276139  gemini.md  generate_test_jwt.py  lukhas_chatgpt_actions.yaml  lukhas_context.md  lukhas_mcp_server.py  lukhas_mcp_stdio.py  lukhas_mcp_stdio_manual.py  mcp_official_server.py  minimal_server.py  (+17 more)
mcp-lukhas-sse/config/: README.md  config.yaml  environment.yaml  logging.yaml
mcp-lukhas-sse/docs/: README.md  api.md  architecture.md  troubleshooting.md
mcp-lukhas-sse/test_env/: pyvenv.cfg
mcp-lukhas-sse/tests/: README.md  conftest.py  test_mcp-lukhas-sse_integration.py  test_mcp-lukhas-sse_unit.py
sdk/python/: README.md  __init__.py  directory_index.json  lukhas_client.py  pyproject.toml
sdk/python/src/lukhas_pwm/: __init__.py  client.py
sdk/python/tests/: test_client.py
(+37512 files in other folders)
