[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lukhas-ai"
version = "1.0.0"
requires-python = ">=3.9"
description = "Production-ready consciousness-aware AI platform with Constellation Framework"
authors = [
    {name = "LUKHAS AI", email = "contact@lukhas.ai"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "consciousness", "cognitive-architecture", "constellation-framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
    "cryptography>=41.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "typing-extensions>=4.8.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "flake8>=6.0.0",
    "coverage>=7.3.0",
    "bandit>=1.7.5",
    "pre-commit>=3.4.0",
]
lambda = [
    "msgpack>=1.0.5",
    "orjson>=3.9.0",
    "prometheus-client>=0.19.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tiktoken>=0.5.0",
]

[project.scripts]
lukhas = "main:main"
lukhas-test = "tests.COMPLETE_SYSTEM_TEST:main"

[project.urls]
Homepage = "https://github.com/LukhasAI/Lukhas"
Documentation = "https://lukhas.ai/docs"
Repository = "https://github.com/LukhasAI/Lukhas"
Issues = "https://github.com/LukhasAI/Lukhas/issues"

[tool.setuptools]
packages = ["lukhas", "matriz"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]  
python_functions = ["test_*"]
addopts = "-q --strict-markers --disable-warnings"
markers = [
    "unit: fast, isolated tests",
    "integration: touches I/O, network, or filesystem",
    "contract: provider/consumer API checks",
    "e2e: end-to-end journeys",
    "slow: long-running tests",
    "security: Security tests",
    "codex: CODEX automated fixes",
    "datetime: Datetime UTC compliance tests",
    "imports: Import structure validation",
    "consciousness: Consciousness system tests",
    "constellation: Constellation Framework tests",
    "tier1: fast, blocking MATRIZ smoke",
    "matriz: MATRIZ subsystem tests",
    "smoke: tiny health checks",
    "critical: critical path tests",
    "regression: regression tests",
    "slow: slow running tests",
    "golden: deterministic trace tests",
    "ablation: consciousness ablation tests",
    "ethics: ethics validation tests",
    "no_mock: tests requiring real dependencies",
    "benchmark: performance benchmark tests",
    "performance: performance tests",
    "audit_safe: tests safe for audit environments",
    "nias_transcendence: NIAS transcendence system tests",
    "no_external_calls: tests that make no external API calls",
    "fault: fault injection tests",
    "perf: performance tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["lukhas", "candidate"]
branch = true
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
fail_under = 30
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py39"

# T4 Production vs Experimental Lane Policy
extend-exclude = [
    ".git",
    "__pycache__", 
    ".venv*",
    "venv*",
    "node_modules",
    "archive",
    "quarantine",
    "reports",
    # Experimental code - excluded from blocking CI
    "candidate",
    # Large auxiliary directories
    "*backup*",
    "*_old",
    "recovery*"
]

# Exclude patterns
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".venv_*",
    "venv",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    "archive",
    "node_modules",
    "lukhas_website/.next",
    # Exclude non-executable docs/examples with invalid syntax
    "tools/documentation/**",
    "tools/benchmarking/**",
    "tools/enterprise/**",
]

[tool.ruff.lint]
# T4 Critical Error Detection
select = [
    "E9",   # syntax errors (blocking)
    "F63",  # duplicate argument (blocking)
    "F7",   # syntax errors in docstrings (blocking)
    "F82",  # undefined name in __all__/future (blocking)
    "F401", # unused imports (T4 system)
    "F811", # redefined names (surgical repair completed)
    "F821", # undefined names (blocking)
]

# Additional linting rules to ignore globally
ignore = [
    "W",    # pycodestyle warnings
    "F",    # pyflakes (except selected above)
    "UP",   # pyupgrade - Python version upgrade syntax
    "E501", # Line too long (handled by formatter)
    "PLR2004", # Magic value comparisons
    "PLR0913", # Too many arguments
    "PLC0415", # Imports not at top-level (allowed in tests/guarded blocks)
    "PLR0911", # Too many return statements (allowed in pragmatic code paths)
]

# Rules to auto-fix
fixable = [
    "E",    # All pycodestyle errors
    "W",    # All pycodestyle warnings
    "F",    # All pyflakes errors
    "UP",   # All pyupgrade fixes
    "I",    # Import sorting
    "Q",    # Quote consistency
    "W292", # No newline at end of file
    "W293", # Blank line contains whitespace
    "E711", # Comparison to None
    "E712", # Comparison to True/False
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.pylint]
max-args = 8
max-returns = 3

# T4 Per-file ignores for package exports and production lane policy
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in package init files (T4 system)
"serve/ui/dashboard.py" = ["I001"]
"serve/extreme_performance_main.py" = ["PLW0603", "ARG001", "ARG002"]
"serve/orchestration_routes.py" = ["PLW0603", "PLR5501", "ARG002"]
"serve/storage/trace_provider.py" = ["PLW0603"]
"tests/core/test_matriz_consciousness_integration.py" = ["W291", "W292", "W293"]
"serve/agi_enhanced_consciousness_api.py" = ["PLW0603", "W293"]
"MATRIZ/**" = ["UP007"]  # Keep Python 3.9 compatible union syntax

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorated_calls = true
check_untyped_defs = true
show_error_codes = true
pretty = false
color_output = false
show_column_numbers = true
# Core enforcement: lukhas, MATRIZ (strict)
files = ["lukhas", "MATRIZ"]

# Experimental/deferred areas get narrower checks or are excluded explicitly
[[tool.mypy.overrides]]
module = ["candidate.*", "archive.*", "quarantine.*", "tests.*", "tools.*"]
ignore_errors = true

# T4 Mutation Testing Configuration
[tool.mutmut]
paths = ["lukhas/", "candidate/"]
tests_dir = "tests"
runner = "pytest"
timeout = 10
exclude = [
    "tests/specs/",
    "tests/fixtures/",
    "__pycache__",
    "*.pyc"
]
report_only = true
