[project][project]

name = "mcp-lukhas-sse"name = "mcp-lukhas-sse"

version = "0.1.0"version = "0.1.0"

description = "MCP SSE Server for LUKHAS with OAuth 2.1 (read-mostly FS tools)"description = "MCP SSE Server for LUKHAS (read-mostly FS tools)"

readme = "README.md"readme = "README.md"

requires-python = ">=3.11"requires-python = ">=3.11"

dependencies = [dependencies = [

    "mcp[cli]",    "mcp[cli]",

    "starlette",    "starlette",

    "uvicorn[standard]",    "uvicorn[standard]",

    "python-dotenv",    "python-dotenv",

    "python-jose[cryptography]",]

    "httpx",

][project.optional-dependencies]

dev = [

[project.optional-dependencies]    "pytest",

dev = [    "pytest-asyncio",

    "pytest",    "httpx",

    "pytest-asyncio",]

    "httpx",

][build-system]

requires = ["hatchling"]

[build-system]build-backend = "hatchling.build"

requires = ["hatchling"]

build-backend = "hatchling.build"[tool.hatch.build.targets.wheel]

include = [

[tool.hatch.build.targets.wheel]    "server.py",

include = [    "README.md",

    "server.py",    ".env.sample"

    "README.md",]

    ".env.sample"

][tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
