[project]
name = "mcp-lukhas-sse"
version = "0.1.0"
description = "MCP SSE Server for LUKHAS with OAuth 2.1 (read-mostly FS tools)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "starlette",
    "uvicorn[standard]",
    "python-dotenv",
    "python-jose[cryptography]",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "server.py",
    "README.md",
    ".env.sample"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]